
        - A regression in 0.48 made a path-restricted `mtn log' show
          revisions, in which not the picked path(s), but one of its parents
          were changed.  This has been fixed.

        - `mtn trusted` will no longer accept single bogus revision ids,
          but instead validates if the given revision really exists in the
          current database.

        - `mtn conflicts store` now gives a nice error message when
          run outside a workspace (fixes bug #30473)

        Other

Sun Jun 13 22:13:53 UTC 2010

        0.48 release.

        Changes

        - Much more information is now passed to the editor when composing a
          commit message for a new revision. The Author, Date, Branch and
          Changelog values may now all be changed directly in the editor
          allowing new branches to be created without using the --branch option.
          Changes to other lines of this information must not be made or the
          commit will abort.

        - The edit_comment lua hook now only takes one argument which is the
          text to be passed to the editor to edit a commit. Existing hooks that
          override the default hook will need to be changed to work properly.

        - The long date/time format used by 'status', 'commit' and 'log' must
          be sufficient to preserve a date through a formatting and parsing
          cycle. The 'status' command now checks for this and warns if the
          format is unsuitable and 'commit' will refuse to operate with an
          unsuitable format.

        - The output of the 'status' and 'log' commands has changed to align
          with the new information displayed by 'commit' so that all three
          commands display revisions similarly.

        - The 'setup' as well as the 'clone' command check if no managed default
          database exists and if no database is given either as command line
          or as workspace option and eventually create a new default database